# arduino-experiments

./: .gitmodules  Arduino.mk  make-all.sh  makeheader.rb
blinky-int/: Makefile  blink-int.cc
common/: parity.cc  timing.c
controller/: Makefile  controller.cc
inc/: cpp-prelude.h  limits  parity.h  timing.h
inc/cpp-prelude/: debouncer.h  digitalpin.h  digitalpinpulledup.h  eeprom.h  generictimer.h  interrupt.h  iom16a.h  iom328p.h  iotnx5.h  opencollectorpin.h  ps2keyboard.h
inc/cpp-prelude/iom328p/: timers.h
keyboard/: Makefile  keyboard.cc
oath/commandline/: Makefile  helpers.sh  main.cc  parse.cc  parse.h  rfc6238.key  test.cc
oath/firmware/: Makefile  main.cc  requests.h  sha1.cc  sha1.h  usbconfig.h  usbdrv
sensors/: Makefile  conv.py  sensors.cc
sensors2/: Makefile  sensors.cc
serial-pipe/: Makefile  serial-pipe.cc
threads/: Makefile  demo.cc  scheduler.cc  scheduler.h
timertest/: Makefile  timertest.cc
usbrf/commandline/: set-led.c
usbrf/driver/: CLI.hs  USBRF.cabal
usbrf/driver/System/USB/: USBRF.hs
usbrf/driver/System/USB/VUSB/: Matcher.hs
usbrf/firmware/: .gitignore  Makefile  calibration.c  main.cc  requests.h  usbconfig.h  wiring.c
